--- a/LojinhaServer/appsettings.json
+++ b/LojinhaServer/appsettings.json
@@ -1,7 +1,7 @@
 {
   "MongoDBSettings":{
-    "ConnectionString": "copiar sua ConnectionString",
-    "DatabaseName": "nome do database"
+    "ConnectionString": "mongodb+srv://LucasOliveira03:dtuer080323@cluster0.pizetuh.mongodb.net/?retryWrites=true&w=majority",
+    "DatabaseName": "lojadb"
   },
   "Logging": {
     "LogLevel": {
